--- a/demo/index.html
+++ b/demo/index.html
@@ -42,7 +42,7 @@
 			tabMode: "indent",
 			value: "<article>\n  <h1>Code blast plugin for Codmirror</h1>\n  <div class=\"based-on\">\n    Based on Joel Besada's experiment:\n    https://twitter.com/JoelBesada/status/670343885655293952\n  </div>\n  \n  <div>\n\t  Github: https://github.com/chinchang/code-blast-codemirror/\n  </div>\n  \n</article>",
 			autoCloseTags: true,
-			blastCode: true,
+			blastCode: { effect: 2 },
 		});
 	    </script>
 
