--- a/demo/index.html
+++ b/demo/index.html
@@ -16,7 +16,7 @@
 		.Codemirror {
 			width: 100%;
 			height: 100%;
-			font-size: 16px;
+			font-size: 20px;
 		}
 
 		</style>
@@ -39,7 +39,7 @@
 			theme: 'monokai',
 			lineWrapping: true,
 			autofocus: true,
-			tabMode: "indent",
+			tabSize: 2,
 			value: "<article>\n  <h1>Code blast plugin for Codmirror</h1>\n  <div class=\"based-on\">\n    Based on Joel Besada's experiment:\n    https://twitter.com/JoelBesada/status/670343885655293952\n  </div>\n  \n  <div>\n\t  Github: https://github.com/chinchang/code-blast-codemirror/\n  </div>\n  \n</article>",
 			autoCloseTags: true,
 			blastCode: { effect: 2 },
