--- a/demo/index.html
+++ b/demo/index.html
@@ -46,5 +46,14 @@
 		});
 	    </script>
 
+	    <script>var _gaq = _gaq || [];
+		_gaq.push(['_setAccount', 'UA-19798102-1']);
+		_gaq.push(['_trackPageview']);
+		(function() {
+		var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async=!0;
+		ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+		var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+		})();</script>
+
 	</body>
 </html>
